July 21th, 2009: Alex Burger <alex_b@users.sourceforge.net>July 18th, 2009: 
- Fixed bug with snmptthandler-embedded.  It was using the wrong IP address
  for hostname / ipaddress.

July 18th, 2009: Alex Burger <alex_b@users.sourceforge.net>July 18th, 2009: 
- Updated snmptthandler-embedded to support securityName and contextName.
- Added variable substitutions Be, Bu, BE, Bn for SNMPv3 when using
  snmptthandler-embedded.
- Updated documentation for 1.3beta1 release

May 17th, 2009: Alex Burger <alex_b@users.sourceforge.net>
- Added snmptthandler-embedded - a Net-SNMP embedded Perl version of
  snmptthandler.
- Added LSB init keywords and actions to snmptt-init.d and changed the
  priority for start / stop so that it starts after snmptrapd and stops
  before snmptrapd.  Thanks to Ville Skytta for the patch.
- Changed the default log path to /var/log/snmptt for Unix and c:\snmpt\log
  for Windows to make it easier to grant write permission to the snmptt
  process.  Thanks to Ville Skytta for the patch.
- Changed umask for log files to 002 to ensure they are not created as world
  writable.  Thanks to Ville Skytta for the suggestion.
- Fixed a bug where the the PID file was being created using the parent (root)
  PID instead of the child (daemon_uid) when daemon_uid is used.
- The DEBUG log file will now be re-opened when a HUP signal is sent.  Thanks 
  to Ville Skytta for the suggestion.
- When debugging is enabled, flush buffers every sleep cycle so we can tail
  the debug log file.
- Don't print messages to the console when starting in daemon mode unless
  debugging is enabled or an error occurs.  Thanks to Ville Skytta for the 
  suggestion.
- 'Could not open debug output file!' is no longer reported when debugging
  is disabled.  Thanks to Ville Skytta for the suggestion.
- Added snmptt.logrotate file from Ville Skytta.

January 15th, 2009: Alex Burger <alex_b@users.sourceforge.net>
- Re-applied patch for bug 1748512.  Somehow it was added wrong and it