@@ -1,6 +1,6 @@
 #!/usr/bin/perl
 #
-# SNMPTTCONVERTMIB v1.3beta1
+# SNMPTTCONVERTMIB v1.3beta2
 #
 # Copyright 2002-2007 Alex Burger
 # alex_b@users.sourceforge.net
@@ -50,7 +50,7 @@ my $prepend_type = 1;
 #############################################################################
 #
 
-my $snmpttconvertmib_version = "v1.3beta1";
+my $snmpttconvertmib_version = "v1.3beta2";
 
 sub showversion
 {
