@@ -1,6 +1,6 @@
 #!/usr/bin/perl
 #
-# SNMPTTHANDLER v1.2
+# SNMPTTHANDLER v1.2beta2
 #
 # Copyright 2002-2007 Alex Burger
 # alex_b@users.sourceforge.net
